docs/api/qiskit/0.19/qiskit.circuit.Instruction.mdx
---
title: Instruction (v0.19)
description: API reference for qiskit.circuit.Instruction in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.Instruction
---

# Instruction

<Class id="qiskit.circuit.Instruction" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/instruction.py" signature="Instruction(name, num_qubits, num_clbits, params)" modifiers="class">
  Generic quantum instruction.

  Create a new instruction.

  **Parameters**

  *   **name** (*str*) – instruction name
  *   **num\_qubits** (*int*) – instruction’s qubit width
  *   **num\_clbits** (*int*) – instruction’s clbit width
  *   **params** (*list\[int|float|complex|str|ndarray|list|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")*]*) – list of parameters

  **Raises**

  **CircuitError** – when the register is not in the correct format.

  ## Attributes

  <span id="instruction-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.Instruction.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="instruction-definition" />

  ### definition

  <Attribute id="qiskit.circuit.Instruction.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="instruction-params" />

  ### params

  <Attribute id="qiskit.circuit.Instruction.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="instruction-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.Instruction.add_decomposition" signature="Instruction.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="instruction-assemble" />

  ### assemble

  <Function id="qiskit.circuit.Instruction.assemble" signature="Instruction.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="instruction-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.Instruction.broadcast_arguments" signature="Instruction.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="instruction-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.Instruction.c_if" signature="Instruction.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="instruction-copy" />

  ### copy

  <Function id="qiskit.circuit.Instruction.copy" signature="Instruction.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="instruction-inverse" />

  ### inverse

  <Function id="qiskit.circuit.Instruction.inverse" signature="Instruction.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="instruction-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.Instruction.is_parameterized" signature="Instruction.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="instruction-mirror" />

  ### mirror

  <Function id="qiskit.circuit.Instruction.mirror" signature="Instruction.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="instruction-qasm" />

  ### qasm

  <Function id="qiskit.circuit.Instruction.qasm" signature="Instruction.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="instruction-repeat" />

  ### repeat

  <Function id="qiskit.circuit.Instruction.repeat" signature="Instruction.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

